--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <!-- https://github.com/orgs/community/discussions/23990 -->
-    <link rel="shortcut icon" type="image/x-icon" href="Images/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="Images/favicon.png">
   </head>
 </html>
 
