Try adding favicon again

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,6 @@
 <head>
+  <!-- Learned from: -->
   <!-- https://github.com/orgs/community/discussions/23990 -->
-  <link rel="shortcut icon" type="image/png" href="Images/favicon.png">
+  <!-- https://oratowski.com/web/github/pages/2023/12/04/favicon-github-pages.html -->
+  <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/Images/favicon.png">
 </head>
