--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,5 +2,6 @@
   <!-- Learned from: -->
   <!-- https://github.com/orgs/community/discussions/23990 -->
   <!-- https://oratowski.com/web/github/pages/2023/12/04/favicon-github-pages.html -->
-  <link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/Images/favicon.png">
+  <!-- https://stackoverflow.com/questions/35037482/favicon-with-github-pages -->
+  <link rel="shortcut icon" type="image/x-icon" href="Images/favicon.ico?">
 </head>
