Try adding favicon again

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,5 +3,5 @@
   <!-- https://github.com/orgs/community/discussions/23990 -->
   <!-- https://oratowski.com/web/github/pages/2023/12/04/favicon-github-pages.html -->
   <!-- https://stackoverflow.com/questions/35037482/favicon-with-github-pages -->
-  <link rel="shortcut icon" type="image/x-icon" href="{{ "/Images/favicon.ico" | absolute_url }}?">
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico?">
 </head>
