--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!-- Copied from: https://github.com/pages-themes/hacker/blob/master/_layouts/default.html -->
+<!-- Learned from: https://github.com/pages-themes/cayman/issues/93 -->
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset='utf-8'>
